modified return objects of GET and updated example swagger bodies
