# backend/server.js
@@ -1,9 +1,11 @@
 const express = require("express");
 const app = express();
-//const client = require('./db/database');
 const database =  require('./service.js');
 
-// Swagger API
+/***************************************************************
+                       Swagger API
+***************************************************************/
+
 const swaggerUi = require('swagger-ui-express'),
 swaggerDocument = require('./swagger.json');
 
@@ -23,17 +25,25 @@ app.post('/auth/logout');
                        User Functions
 ***************************************************************/
 
-app.get('/user/:userId', database.getUser);
-
-app.put('/user/:userId', database.putUserAdmin);
+app.get('/user/:userId', async(request, response) => {
+  await database.getUser(request, response);
+});
 
 app.delete('/user/:userId', database.deleteUser);
+
+app.post('/user/:userId/:topicGroupId', database.postAdmin);
+
+app.delete('/user/:userId/:topicGroupId', database.deleteAdmin);
 
 /***************************************************************
                        Topic Group Functions
 ***************************************************************/
 
+app.get('/topicGroup', async(request, response) => {
+  await database.getAllTopicGroups(request, response);
+});
 
+app.get('/topicGroup/:topicGroupName/topic', database.getTopics);
 
 app.listen(8000, () => {
   console.log("Server listening on http://localhost:8000/");
